--- a/DefaultDirectory/Src/Screen Roberta nie ruszać%21%21%21.fx.yaml
+++ b/DefaultDirectory/Src/Screen Roberta nie ruszać%21%21%21.fx.yaml
@@ -3,7 +3,7 @@
     "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         DelayItemLoading: =true
         Items: |-
-            =Office365OutlookOffice365Outlook.GetEmails({fetchOnlyUnread:false})
+            =Office365Outlook.GetEmails({fetchOnlyUnread:false})
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
@@ -32,7 +32,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.SampleHeading
+            Text: =ThisItem.Bcc
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 173
             X: =103
@@ -47,7 +47,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.SampleText
+            Text: =ThisItem.Body
             VerticalAlign: =VerticalAlign.Top
             Width: =Title2.Width
             X: =Title2.X
