--- a/DefaultDirectory/Src/Screen Roberta nie ruszać%21%21%21.fx.yaml
+++ b/DefaultDirectory/Src/Screen Roberta nie ruszać%21%21%21.fx.yaml
@@ -32,7 +32,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.Bcc
+            Text: =ThisItem.Subject
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 173
             X: =103
